Form draft, component changes to workaround overflow issue

--- a/app/assets/stylesheets/layouts/editor/_common.css.sass
+++ b/app/assets/stylesheets/layouts/editor/_common.css.sass
@@ -150,7 +150,8 @@
     /*-----------  Steps  -----------*/
 
     .step-wrapper
-      overflow: scroll
+      overflow-y: scroll
+      overflow-x: hidden
       width: $stepWidth
       padding: 0 2em 2em
       max-width: $stepWidth
